--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -26,7 +26,7 @@
     gap: 1rem;
     }
     
-    .nav-button-auth {
+    .nav-register-button {
     background-color: #1e1e1e;
     color: #FFD700;
     border: 1px solid #333;
@@ -37,7 +37,7 @@
     transition: all 0.3s ease;
     }
     
-    .nav-button:hover {
+    .nav-register:hover {
     border-color: #FFD700;
     box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
     }
